watering plants and generating mixedseed somewhat done